--- a/Scripts/OTZ.results.manuscript .Rmd
+++ b/Scripts/OTZ.results.manuscript .Rmd
@@ -41,6 +41,7 @@ Cal_bal
 cbind(Cal_bal$Group, Cal_bal$EE)
 cbind(Cal_bal$Group, Cal_bal$TL) 
 ```
+
 #Define different sets of functional groups
 ```{r}
 all_species <- Cal_bal$Group[1:92] 
@@ -219,6 +220,9 @@ write.csv(change_2_total, "/Users/sallydowd/Documents/GitHub/mesopelagic-fishing
 
 #TO NOTE: Mesopelagics currently are cut out of all of the graphs- need to make sure you have same scale for everything, can mention their decrease in text and this exception was made for graphs 
 ```{r}
+#Define a common ggplot theme
+standard_theme <- theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) + 
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + theme(legend.text.align= 0, legend.title= element_text(size = 10), legend.text = element_text(size= 9), axis.text=element_text(size=9), axis.title=element_text(size=10))
 
 #Scenario 1
 
@@ -230,7 +234,6 @@ change_1_1 <- change_1_1_df %>% mutate(value = round(as.numeric(paste(value)), 2
 Predator_value <- read_csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Predator.value.csv")
 change_1_1 <- change_1_1 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species")
 change_1_1[9,4] <- "Neither"
-
 change_1_1$Value <- factor(change_1_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 
 change_1_1_plot <- change_1_1 %>% ggplot(aes(col = Value)) + geom_point(aes(x=biomass_prop, y=reorder(species, desc(species)))) + 
@@ -238,8 +241,7 @@ scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) +
  scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
   xlim(0.70, 1.35) + 
-xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "Classification") + standard_theme + 
-ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/dietover.50.jpeg")
+xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "Classification") + standard_theme
 change_1_1_plot 
 
 #3: Lower dependence on mesopelagics: Diet under 0.05 
@@ -257,7 +259,7 @@ scale_color_manual(values = c("#0000FF", "#00FF70")) +
  scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) + 
  xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
 xlab("Relative biomass") + ylab("Species with low diet proportion") + 
-labs(col = "Classification") + standard_theme + ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/dietunder.50.jpeg")
+labs(col = "Classification") + standard_theme
 change_1_2_plot
 
 #4: No dependence on mesopelagics
@@ -275,7 +277,7 @@ change_1_3 <- change_1_3_df %>% mutate(value = round(as.numeric(paste(value)), 2
 change_1_3_plot <- change_1_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
 xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
 xlab("Relative biomass") + ylab("Species with no diet proportion") + 
-scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "Classification") + standard_theme + ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/nodiet.50.jpeg")
+scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "Classification") + standard_theme
 change_1_3_plot
 
 #Higher dependence on mesopelagics: Diet over 0.05
@@ -284,7 +286,7 @@ change_2_1_df <- as.data.frame(change_2_1_df)
 change_2_1 <- change_2_1_df %>% mutate(value = round(as.numeric(paste(value)), 2), "result" = cut(value, breaks = c(-Inf, 0.99, 1.001, Inf), labels = c("Decreasing", "Neither", "Increasing"), right = TRUE)) %>% arrange(value)
 
 change_2_1 <- change_2_1 %>% rename(biomass_prop= value) %>% left_join(Predator_value, by="species")
-change_2_1[9,4] <- "Neither"
+change_2_1[10,4] <- "Neither"
 
 change_2_1$Value <- factor(change_2_1$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 change_2_1_plot <- change_2_1 %>% ggplot(aes(col = Value)) + geom_point(aes(x=biomass_prop, y=reorder(species, desc(species)))) + 
@@ -292,8 +294,7 @@ scale_color_manual(values = c("#FF0000","#0000FF", "#00FF70", "#FF00FF")) +
  scale_y_discrete(labels= c("Tufted Puffin"= "Tufted puffin", "P. Ocean Perch"= "P. ocean perch", "Leach's S. Petrel"= "Leach's s. petrel", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Slope rock."= "Slope rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + 
   geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) +
   xlim(0.70, 1.35) + 
-xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "Classification") + standard_theme + 
-ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/dietover.25.jpeg")
+xlab("Relative biomass") + ylab("Species with high diet proportion ") + labs(col = "Classification") + standard_theme 
 change_2_1_plot 
 
 #3: Lower dependence on mesopelagics: Diet under 0.05 
@@ -310,7 +311,7 @@ scale_color_manual(values = c("#0000FF", "#00FF70")) +
  scale_y_discrete(labels= c("Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Juv. Ele. Seal"= "Juv. n. elephant seal", "Greenstriped"= "Greenstriped rockfish", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Arrowtooth"= "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Shortspine thorny."= "Shortspine thornyhead", "Widow rock."= "Widow rockfish", "mesopelagics"= "Mesopelagics", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish")) + 
   xlim(0.75, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
 xlab("Relative biomass") + ylab("Species with low diet proportion") + 
-labs(col = "Classification") + standard_theme + ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/dietunder.25.jpeg")
+labs(col = "Classification") + standard_theme 
 change_2_2_plot
 
 #4: No dependence on mesopelagics
@@ -319,7 +320,7 @@ change_2_3 <- change_2_3_df %>% mutate(value = round(as.numeric(paste(value)), 2
 change_2_3_plot <- change_2_3 %>% ggplot() + geom_point(aes(x= biomass_prop, y=reorder(species, desc(species)))) + 
 xlim(0.70, 1.35) + geom_vline(xintercept=1, linetype= "solid", color= "black", size= 0.75) + 
 xlab("Relative biomass") + ylab("Species with no diet proportion") + 
-scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "Classification") + standard_theme + ggsave(width = 8, height = 7, "~/Documents/OTZ.manuscript/Images/Sub.2/nodiet.25.jpeg")
+scale_y_discrete(labels= c("Adult N. Ele. Seal"= "Adult n. elephant seal", "amphipods"= "Amphipods", "benthic shp"= "Benthic shrimp", "Brown Pelican"= "Brown pelican", "Cali. gull"= "California gull", "carniv-zoops" = "Carnivorous zooplankton", "copepods"= "Copepods", "Dungeness"= "Dungeness crab", "epibenthic"= "Epibenthic", "euphausiids"= "Euphausiids", "infauna"= "Infauna", "Juv. round."= "Juv. roundfish", "Juv. thorny."= "Juv. thornyhead", "large jellies"= "Large jellies", "micro-zoop"= "Microzooplankton", "Nearshore rock."= "Nearshore rockfish", "Pacific Mackerel"= "Pacific mackerel", "pandalid shp"= "Pandalid shrimp", "phytoplankton"= "Phytoplankton", "Pigeon Guillemot"= "Pigeon guillemot", "Rhino. auk"= "Rhinoceros auklet", "small jellies"= "Small jellies", "surf perch"= "Surf perch", "tanner crb"= "Tanner crab", "Transient Orcas"= "Transient orcas", "Yelloweye rock."= "Yelloweye rockfish")) + labs(col = "Classification") + standard_theme 
 change_2_3_plot
 ```
 
@@ -332,47 +333,40 @@ data_2 <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/d
 #Plot functional group biomass over the 50-year simulation
 #Graph with commercially valuable predators
 Predator_value_ts <- Predator_value %>% rename(spp= "species")
-data_1_high <- data_1 %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp") 
-data_1_high[1:600, 4] <- "Neither"
+data_1_high <- data_1 %>% select(-X) %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp")
 data_1_high$Value <- factor(data_1_high$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
-data_2_high <- data_2 %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp") 
-data_2_high[1:600, 4] <- "Neither"
+data_1_high[1:600, 4] <- "Neither"
+
+data_2_high <- data_2 %>% select(-X) %>% filter(spp %in% diet_over_0.05) %>% left_join (Predator_value_ts, by= "spp") 
 data_2_high$Value <- factor(data_2_high$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
-data_1_low <- data_1 %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
+data_2_high[1:600, 4] <- "Neither"
+
+data_1_low <- data_1 %>% select(-X) %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
 data_1_low$Value <- factor(data_1_low$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
-data_2_low <- data_2 %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
+data_2_low <- data_2 %>% select(-X) %>% filter(spp %in% diet_under_0.05) %>% left_join(Predator_value_ts, by= "spp") %>% filter(spp !="mesopelagics")
 data_2_low$Value <- factor(data_2_low$Value, levels = c("Commercial", "Non-commercial", "Both", "Neither"))
 
 plot1_high_diet <- data_1_high %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
   xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + labs(colour= "Species with high diet proportion", title= "A") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Species with high diet proportion",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
-ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.50.jpeg")
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish")) + labs(colour= "Species with high diet proportion", title= "A") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
+ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.50.jpeg", dpi=600)
 plot1_high_diet
 
 plot2_high_diet <- data_2_high %>% filter(spp %in% diet_over_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
 xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Juv. Ele. Seal" = "Juv n. elephant seal")) + labs(colour= "Species with high diet proportion", title= "B") + labs(colour= "Species with high diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Species with high diet proportion",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
-ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.25.jpeg")
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Albacore" = "Albacore", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Lingcod"= "Lingcod", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Juv. Ele. Seal" = "Juv n. elephant seal")) + labs(colour= "Species with high diet proportion", title= "B") + labs(colour= "Species with high diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Commercial"= 1, "Non-commercial"=2,"Both"=3, "Neither"=4)) + 
+ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/high.diet.25.jpeg", dpi=600)
 plot2_high_diet
 
 plot1_low_diet <- data_1_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
   xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Species with low diet proportion",values=c("Non-commercial"=2,"Both"=3)) + 
-ggsave(width = 8.25, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.50.jpeg")
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme +  geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + 
+ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.50.jpeg", dpi=600)
 plot1_low_diet
-
-
 
 plot2_low_diet <- data_2_edt %>% filter(spp %in% diet_under_0.05) %>% mutate(spp = fct_reorder(spp, biomass, tail, n = 1, .desc = TRUE)) %>% ggplot(aes(x= month, y = biomass)) + geom_line(aes(colour= spp, linetype= Value)) + 
 xlab("Month") + ylab("Relative biomass") + scale_x_continuous(name= "Year", breaks= c(0, 120, 240, 360, 480, 600), labels= c("2001", "2010", "2020", "2030", "2040", "2050")) + 
-scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme + geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Species with low diet proportion",values=c("Non-commercial"=2,"Both"=3)) + ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg")
-plot2_low_diet
-
-
-#combo_ts_high_diet <- ggarrange(plot1_high_diet + rremove("xlab") + rremove("ylab"), plot2_high_diet + rremove("xlab") + rremove("ylab"), ncol = 2, nrow = 1)
-
-#annotate_figure(combo_ts_high_diet, bottom= text_grob("Year", size=14), left= text_grob("Relative biomass", size=14, rot=90)) + 
-#ggsave(width = 8, height = 6, "~/Documents/OTZ.Manuscript/Images/Sub.2/ts.combo.highdiet.jpeg")
+scale_color_discrete(type = "viridis", labels= c("Greenstriped" = "Greenstriped rockfish", "P. Ocean Perch"= "P. ocean perch", "Arrowtooth" = "Arrowtooth flounder", "Canary rock."= "Canary rockfish", "Longspine thorny."= "Longspine thornyhead", "Shelf rock."= "Shelf rockfish", "Shortspine thorny."= "Shortspine thornyhead", "Slope rock."= "Slope rockfish", "Widow rock."= "Widow rockfish", "Yellowtail rock."= "Yellowtail rockfish", "Western Gull"= "Western gull", "Resident Orcas"= "Resident orcas", "Double corm."= "Double cormorant", "Brandt's corm."= "Brandt's cormorant", "Juv. rock."= "Juv. rockfish", "Other cephal."= "Other cephalopod", "Sea Lions"= "Sea lions", "Splitnose rock."= "Splitnose rockfish", "Juv. Ele. Seal"= "Juv. n. elephant seal")) + labs(colour= "Species with low diet proportion") + standard_theme + geom_hline(yintercept=1, linetype= "solid", color= "black", size= 0.75) + guides(linetype = guide_legend(order = 2),col = guide_legend(order = 1)) + scale_linetype_manual("Classification",values=c("Non-commercial"=2,"Both"=3)) + ggsave(width = 8.75, height = 5.25, "~/Documents/OTZ.manuscript/Images/Sub.2/low.diet.25.jpeg", dpi=600)
 
 #combo_ts_low_diet <- ggarrange(plot1_low_diet + rremove("xlab") + rremove("ylab"), plot2_low_diet + rremove("xlab") + rremove("ylab"), ncol = 2, nrow = 1)
 
